2007-01-16  Alvaro Navarro <anavarro@gsyc.escet.urjc.es>

	* main.py:
	* repository:
	* plugins.py:
	* connection:

	New plugins module. Now cvsanaly only extract information
	from cvs/svn into stdout.

2006-12-08  Jesus M. Gonzalez-Barahona <jgb@gsyc.escet.urjc.es>

	* generations.py: Simplified and more generic code. Now
	   periods of an arbitrary number of days are supported,
	   and periods specified as a number of slots,
	   in addition to quarters. Top fraction of commiters and
	   arbitrary fraction of commits are also supported.
	   Small fixes here and there. Normalized (by total
	   number of commits per period) matrices are also produced.

2006-12-06  Jesus M. Gonzalez-Barahona <jgb@gsyc.escet.urjc.es>

	* generations.py: Simplified and more generic code. Now
	   instead of quarters, we have periods. A view for
	   periods of one quarter is currently used, so in the
	   end we are still working with quartes, but any other
	   period could now easily be selected, with the proper
	   view.

2006-12-04  Jesus M. Gonzalez-Barahona <jgb@gsyc.escet.urjc.es>

	* main.py:
	    - New options for generations analysis
	    - New option for specifying folder for analysis output data
	* generations.py: new file for performing generations analysis

2006-12-02  Jesus M. Gonzalez-Barahona <jgb@gsyc.escet.urjc.es>

	* main.py:
	    - New call interface (now options have to be named)
	    - Messages and interface now should be in sync
	* database.py
	    - Support for empty passwd

2006-10-20  Alvaro Navarro <anavarro@gsyc.escet.urjc.es>

	* repository.py:
	    - New way for storing data without having to
	      waint until the process ends.
	    - Don't store commiters-module. We can obtain 
	      it later with a simple query.
	* commit.py: commit2sql function no longer needed.
	* file.py: file2sql function no longer needed.
	* directories.py: new implementation with absolute path.
	* main.py: new flag in order to indicate type of repository.
