@@ -1,3 +1,11 @@
+2007-01-23  Alvaro del Castillo <acs@gsyc.escet.urjc.es>
+
+	* pycvsanaly/repository.py
+	* pycvsanaly/main.py
+
+	Added --repodir option for indicating the repository dir.
+	Auto detected the kind of repository.
+
 2007-01-16  Alvaro Navarro <anavarro@gsyc.escet.urjc.es>
 
 	* main.py:
